--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 VITE_API_AUTH=https://localhost/api/auth/
 VITE_API_BOOKING=https://localhost/api/bookings/
 VITE_API_ROOM=https://localhost/api/rooms/
+VITE_API_GUEST=https://localhost/api/guests/
+VITE_API_RESERVATION=https://localhost/api/reservations/
