--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.3.0",
+    "@mui/lab": "^6.0.0-beta.25",
+    "@mui/material": "^6.4.2",
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
     "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
